# nomos-relay

./: .gitignore  Dockerfile  README.md  build.sh  gemma4-nomos-cloud.Modelfile  gemma4-nomos-relay.Modelfile  gemma4-nomos.Modelfile  nomos.py  nomos_rag.py  oc-nomos.sh  package.json  pi-nomos.sh  proxy.js  pyproject.toml  smoke.sh  test_malformed.py  test_missing_command_execute.py  test_missing_keys.py  test_typed_malformed.py
.github/workflows/: ci.yml
api/: relay.schema.json
models/: gemma4-nomos-git.Modelfile  gemma4-nomos-overlord.Modelfile  gemma4-nomos-relay.Modelfile
nomos_relay/: nomos.py  nomos_git.py  nomos_kanban.py  nomos_overlord.py  nomos_rag.py
nomos_relay.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/protocol/: test_schema.py
tests/unit/: test_kanban.py  test_rag.py
